<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epuck_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vss.viswatejabottu@gmail.com">viswa</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2</depend>
  <depend>webots_ros2_control</depend>
  <depend>webots_ros2_driver</depend>
  <depend>controller_manager</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
